--- a/certificate_validator/setup.cfg
+++ b/certificate_validator/setup.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
 current_version = 0.4.1
 commit = True
-tag = True
+tag = False
 
 [bumpversion:file:certificate_validator/__init__.py]
 search = __version__ = '{current_version}'
